--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
   <body>
     <h1>Singers</h1>
     <div id="table-container">
-     <table>
-       <thead>
-         <th>
-           <td>Name</td>
-           <td>Country</td>
-           <td>Period Active</td>
-           <td>Genre</td>
-         </th>
-       </thead>
-     </table>
+      <table>
+        <thead>
+          <tr>
+            <td>Name</td>
+            <td>Country</td>
+            <td>Period Active</td>
+            <td>Genre</td>
+          </tr>
+        </thead>
+        <tbody class="table-body"></tbody>
+      </table>
     </div>
 
     <script src="./assets/js/main.js" defer></script>
