--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <table>
         <thead>
           <tr>
-            <td>Name</td>
-            <td>Country</td>
-            <td>Period Active</td>
-            <td>Genre</td>
+            <td class="button">Name</td>
+            <td class="button">Country</td>
+            <td class="button">Period Active</td>
+            <td class="button">Genre</td>
           </tr>
         </thead>
         <tbody class="table-body"></tbody>
